resolving conflicts